2003-07-28  Thorsten Jordan <thorsten_jordan@gmx.de>
	* torpedo.cpp user_interface.cpp
	  - introduced new torpedo types. Now all historical types available
	    with authentic data, except T4 (Falke) sensors.
	* depth_charge.cpp
	  - fixed bug: depth charges were never removed and kept falling and
	    exploding eternally.

2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
	* torpedo.cpp submarine_interface.cpp submarine.cpp
	  - FAT/LUT programmable and simulated.
	  - Now all torpedo types are simulated.

2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - ships are selectable by clicking on the map.
	* submarine_interface.cpp
	  - first bits of torpedo programming interface for FATs.
	  - turn switches are drawn and are turnable.

2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
	* game.cpp
	  - some preparations for damage simulation

2003-07-26  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - new panel design, panel features resize, hiding planned.

2003-07-25  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - introduced fog.
	* game.cpp
	  - fixed cloud clip bug.

2003-07-23  Thorsten Jordan <thorsten_jordan@gmx.de>
	* Improved conning tower model with textures.

2003-07-22  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_display.cpp
	  - added display of conning tower model.

2003-07-17  Thorsten Jordan <thorsten_jordan@gmx.de>
	* sound.cpp
	  - used SDL_InitSubSystem at pre-Init stage.

2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
	* submarine_interface.cpp
	  - show torpedo that is to be moved as ghost image.

2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
	* submarine_interface.cpp
	  - implemented manual torpedo (re)loading and transfer.
	    automatic loading disabled.

2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
	* new model: small tanker. (now 11 ship and sub models)

2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>