@@ -21,6 +21,7 @@
 #include "global_data.h"
 #include "texts.h"
 #include "date.h"
+#include "sound.h"
 #include "ship_largemerchant.h"
 #include "ship_mediummerchant.h"
 #include "ship_smallmerchant.h"
@@ -379,10 +380,13 @@ int main(int argc, char** argv)
 		if (*it == "--help") {
 			cout << argv[0] << ", usage:\n--help\t\tshow this\n"
 			<< "--res n\t\tuse resolution n horizontal,\n\t\tn is 512,640,800,1024 (recommended) or 1280\n"
-			<< "--nofullscreen\tdon't use fullscreen\n";
+			<< "--nofullscreen\tdon't use fullscreen\n"
+			<< "--nosound\tdon't use sound\n";
 			return 0;
 		} else if (*it == "--nofullscreen") {
 			fullscreen = false;
+		} else if (*it == "--nosound") {
+			sound::use_sound = false;
 		} else if (*it == "--res") {
 			list<string>::iterator it2 = it; ++it2;
 			if (it2 != args.end()) {
